tests/golden/invalid/function-rule-01.rego
package p

p(x) = ret {
  ret = "foo"
}

some_test {
  p = 1
}
